Fix:  fix style bugs on mobile

--- a/src/components/ContactUs/QuestionForm/QuestionForm.css
+++ b/src/components/ContactUs/QuestionForm/QuestionForm.css
@@ -98,10 +98,10 @@ textarea:focus-visible {
   flex: 1;
 }
 .qf-img-container {
-  max-height: 30%;
+  max-height: 20%;
 }
 .qf-img-container img {
-  height: 100%;
+  height: 80%;
   object-fit: cover;
 }
 @media (min-width: 479px) {
@@ -122,6 +122,7 @@ textarea:focus-visible {
     gap: 0;
   }
   .qf-img-container img {
+    height: 100%;
     object-fit: cover;
   }
   .qf-text-n-form {
