--- a/src/components/StorePage/FilterComponent/FilterComponent.css
+++ b/src/components/StorePage/FilterComponent/FilterComponent.css
@@ -12,6 +12,7 @@
   align-items: center;
   border: 1px solid var(--clr-neutral-300);
   position: relative;
+  z-index: 0;
 }
 .sort-container {
   text-transform: uppercase;
